// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Identity reducer handles actions - setDonationAllow 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "signerPrivKey": "",
    "signerPubKey": "",
    "name": "",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": null,
    "lockedBalance": null,
    "donationAllow": false,
    "shieldingTax": true,
    "donationAddress": "",
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": false,
    "message": "",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles actions - setLoading 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "signerPrivKey": "",
    "signerPubKey": "",
    "name": "",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": null,
    "lockedBalance": null,
    "donationAllow": true,
    "shieldingTax": true,
    "donationAddress": "",
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": true,
    "message": "",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles actions - setLoadingMessage 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "signerPrivKey": "",
    "signerPubKey": "",
    "name": "",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": null,
    "lockedBalance": null,
    "donationAllow": true,
    "shieldingTax": true,
    "donationAddress": "",
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": false,
    "message": "This is a loading message",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles actions - setShippingData 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "signerPrivKey": "",
    "signerPubKey": "",
    "name": "",
    "shippingData": Immutable.ShippingData {
      "firstName": "Rumble",
      "lastName": "Fish",
      "street": "RumbleFish street",
      "country": "RumbleFish country",
      "region": "Fish Region",
      "city": "Fishville",
      "postalCode": "1337-455",
    },
    "balance": null,
    "lockedBalance": null,
    "donationAllow": true,
    "shieldingTax": true,
    "donationAddress": "",
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": false,
    "message": "",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles actions handles setBalance 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "signerPrivKey": "",
    "signerPubKey": "",
    "name": "",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": "2.34",
    "lockedBalance": null,
    "donationAllow": true,
    "shieldingTax": true,
    "donationAddress": "",
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": false,
    "message": "",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles actions handles setErrors 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "signerPrivKey": "",
    "signerPubKey": "",
    "name": "",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": null,
    "lockedBalance": null,
    "donationAllow": true,
    "shieldingTax": true,
    "donationAddress": "",
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": false,
    "message": "",
  },
  "errors": [Error: this is some error],
}
`;

exports[`Identity reducer handles actions handles setFetchingBalance to false 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "signerPrivKey": "",
    "signerPubKey": "",
    "name": "",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": null,
    "lockedBalance": null,
    "donationAllow": true,
    "shieldingTax": true,
    "donationAddress": "",
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": false,
    "message": "",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles actions handles setFetchingBalance to true 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "signerPrivKey": "",
    "signerPubKey": "",
    "name": "",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": null,
    "lockedBalance": null,
    "donationAllow": true,
    "shieldingTax": true,
    "donationAddress": "",
  },
  "fetchingBalance": true,
  "loader": Immutable.Record {
    "loading": false,
    "message": "",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles actions handles setIdentity 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": "test-id",
    "address": "testaddress",
    "transparentAddress": "transparent-test-address",
    "signerPrivKey": "test-hex-key",
    "signerPubKey": "test-hex-key",
    "name": "Saturn",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": null,
    "lockedBalance": null,
    "donationAllow": true,
    "shieldingTax": true,
    "donationAddress": "",
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": false,
    "message": "",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles actions handles setLockedBalance 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "",
    "transparentAddress": "",
    "signerPrivKey": "",
    "signerPubKey": "",
    "name": "",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": null,
    "lockedBalance": "2.34",
    "donationAllow": true,
    "shieldingTax": true,
    "donationAddress": "",
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": false,
    "message": "",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles epics - fetchBalance creates shield balance operation 1`] = `
Immutable.Map {
  "test-op-id": Immutable.Operation {
    "opId": "test-op-id",
    "type": "shieldBalance",
    "meta": Immutable.Record {
      "amount": "0.0023375",
      "from": "transparent-test-address",
      "to": "testaddress",
    },
    "txId": null,
    "error": null,
    "status": "pending",
  },
}
`;

exports[`Identity reducer handles epics - fetchBalance fetches transparent and private balances 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": "test-id",
    "address": "testaddress",
    "transparentAddress": "transparent-test-address",
    "signerPrivKey": "test-hex-key",
    "signerPubKey": "test-hex-key",
    "name": "Saturn",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": "2.2352",
    "lockedBalance": "0",
    "donationAllow": true,
    "shieldingTax": true,
    "donationAddress": "",
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": false,
    "message": "",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles epics - fetchBalance handles errors 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": "test-id",
    "address": "testaddress",
    "transparentAddress": "transparent-test-address",
    "signerPrivKey": "test-hex-key",
    "signerPubKey": "test-hex-key",
    "name": "Saturn",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": null,
    "lockedBalance": null,
    "donationAllow": true,
    "shieldingTax": true,
    "donationAddress": "",
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": false,
    "message": "",
  },
  "errors": "node error",
}
`;

exports[`Identity reducer handles epics handles createIdentity bootstraps general for mainnet 1`] = `
Array [
  Object {
    "address": "zs1lrc8s53ajqy2suwnderegv3ap3psm9shcx0h2j0qtyp3j4dgm7f8fadulxmckrztl83egl2l05r",
    "description": "Contains list of public channels",
    "keys": Object {
      "ivk": "zivks145lmuzdneatnqq737aq0zx8msaamtr8aeksryrrcm8eqgfppzgzsvugld4",
    },
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "channelOfChannels",
    "private": true,
    "unread": 0,
  },
  Object {
    "address": "zs1e3u6jury8ahlfccudwk9z8dctsnlk32y0wc5l5tsv0e2yud4y5sdyfq69cynlscz02qnxph3uur",
    "description": "Store data about users.",
    "keys": Object {
      "ivk": "zivks1gpspx8v7h34k9zptv5vdaeuhqcrkvk6g872eldt49mqzsjdzlcpqezzh95",
    },
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "RegisteredUsers",
    "private": true,
    "unread": 0,
  },
  Object {
    "address": "zs12nwl3q345gumclndp7awk9exmgdm9lehk0zyrjarrmqhg97uh5pw8vkmw6554m3e7rrmqvck9js",
    "description": "This is a general channel available to all users of Zbay by default.",
    "keys": Object {
      "ivk": "zivks1hjwr7pqzp22cku022fjuvxsjdj40t34ht3areat9tr5kq0k7qsrqx9s8yu",
    },
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "general",
    "private": true,
    "unread": 0,
  },
]
`;

exports[`Identity reducer handles epics handles createIdentity bootstraps general for testnet 1`] = `
Array [
  Object {
    "address": "ztestsapling1rwqrk7uclurs5dqm70g4zf0rh9dmjf60qqtw2n68pa37ycs2zccglcymjg0nnmus70m3wkdyxx0",
    "description": "Contains list of public channels",
    "keys": Object {
      "ivk": "zivktestsapling194t7fk8ns0v2u4jysmrmwyh2ymq52t5378ey8jym23d2dpy3d5pssyk97t",
    },
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "channelOfChannels",
    "private": true,
    "unread": 0,
  },
  Object {
    "address": "ztestsapling1ggtntm4dgfc0remdxzex0pz722swjtqxc7wxj4eeqksmups04dkhjvcj5vcklmud2y3yvgj302m",
    "description": "Store data about users.",
    "keys": Object {
      "ivk": "zivktestsapling1k93jxuecldthr9myy9d0svsy5dz57xvtcw7hyh9wj9xqy4ehfsqszlhdce",
    },
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "RegisteredUsers",
    "private": true,
    "unread": 0,
  },
  Object {
    "address": "ztestsapling1dfjv308amnk40s89trkvz646ne69553us0g858mmpgsw540efgftn4tf25gts2cttg3jgk9y8lx",
    "description": "This is a general channel available to all users of Zbay by default.",
    "keys": Object {
      "ivk": "zivktestsapling1algnz2x84pqcnfdxrlntw73wpuqm3v568cepf5tuctyusm9javpqyjyzqy",
    },
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "general",
    "private": true,
    "unread": 0,
  },
]
`;

exports[`Identity reducer handles epics handles createIdentity creates identity in vault 1`] = `
Array [
  Array [
    Object {
      "address": "sapling-private-address",
      "keys": Object {
        "sk": "sapling-private-address-spending-key",
        "tpk": "transparent-address-private-key",
      },
      "name": "Mercury",
      "signerPrivKey": "test-hex-key",
      "signerPubKey": "test-hex-key",
      "transparentAddress": "transparent-address",
    },
  ],
]
`;

exports[`Identity reducer handles epics handles createIdentity returns created identity 1`] = `
Object {
  "address": "sapling-private-address",
  "id": "thisisatestid",
  "keys": Object {
    "sk": "sapling-private-address-spending-key",
    "tpk": "transparent-address-private-key",
  },
  "name": "Mercury",
  "signerPrivKey": "test-hex-key",
  "signerPubKey": "test-hex-key",
  "transparentAddress": "transparent-address",
}
`;

exports[`Identity reducer handles epics handles set identity - loads channels 1`] = `
Immutable.List [
  Immutable.Map {
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "Channel 2",
    "private": true,
    "address": "zs1testaddress2",
    "unread": 2,
    "description": "",
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-2",
      "sk": "test-secret-key",
    },
  },
  Immutable.Map {
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "Channel 1",
    "private": true,
    "address": "zs1testaddress1",
    "unread": 1,
    "description": "Channel about 1",
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-1",
      "sk": "test-secret-key",
    },
  },
  Immutable.Map {
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "name": "Channel 0",
    "private": true,
    "address": "zs1testaddress0",
    "unread": 0,
    "description": "",
    "keys": Immutable.Map {
      "ivk": "incoming-viewing-key-0",
      "sk": "test-secret-key",
    },
  },
]
`;

exports[`Identity reducer handles epics handles set identity - sets identity 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": "test-id",
    "address": "testaddress",
    "transparentAddress": "transparent-test-address",
    "signerPrivKey": "test-hex-key",
    "signerPubKey": "test-hex-key",
    "name": "Saturn",
    "shippingData": Immutable.ShippingData {
      "firstName": "",
      "lastName": "",
      "street": "",
      "country": "",
      "region": "",
      "city": "",
      "postalCode": "",
    },
    "balance": "2.2352",
    "lockedBalance": "0",
    "donationAllow": true,
    "shieldingTax": true,
    "donationAddress": "",
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": false,
    "message": "Loading users and messages",
  },
  "errors": "",
}
`;

exports[`Identity reducer handles epics handles updateShippingData - finishes form submitting 1`] = `
Array [
  Array [
    false,
  ],
]
`;

exports[`Identity reducer handles epics handles updateShippingData - sets shipping data in store 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": "test-id",
    "address": "testaddress",
    "transparentAddress": "transparent-test-address",
    "signerPrivKey": "test-hex-key",
    "signerPubKey": "test-hex-key",
    "name": "Saturn",
    "shippingData": Immutable.ShippingData {
      "firstName": "Rumble",
      "lastName": "Fish",
      "street": "RumbleFish street",
      "country": "RumbleFish country",
      "region": "Fish Region",
      "city": "Fishville",
      "postalCode": "1337-455",
    },
    "balance": null,
    "lockedBalance": null,
    "donationAllow": true,
    "shieldingTax": true,
    "donationAddress": "",
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": false,
    "message": "Loading users and messages",
  },
  "errors": "node error",
}
`;

exports[`Identity reducer handles epics handles updateShippingData - sets shipping data in vault 1`] = `
Array [
  Array [
    "test-id",
    Object {
      "city": "Fishville",
      "country": "RumbleFish country",
      "firstName": "Rumble",
      "lastName": "Fish",
      "postalCode": "1337-455",
      "region": "Fish Region",
      "street": "RumbleFish street",
    },
  ],
]
`;
